# private-multi-winner-voting

./: .gitignore  README.md  environment.yml  main.py  parameters.py  queryset.py  requirements.txt  utils.py  utils_unit_test.py  virtual_parties.py
analysis/: compute_compare_privacy_costs.py  pate.py  private_knn.py  rdp_cumulative.py
architectures/: PascalNetwork.py  densenet_pre.py  mnist_net_pate_timing.py  resnet.py  resnet_pre.py
autodp/: dp_acct.py  rdp_acct.py  rdp_bank.py  test_configs.py  utils.py
capc/mpc/: argmax.cpp  run_test.py
capc/mpc/bindings/argmax/: CMakeLists-binary.txt  CMakeLists-minimal-shared.txt  CMakeLists-shared.txt  CMakeLists.txt  argmax_cython.cpp  argmax_cython.hpp  argmax_cython.pyx  argmax_cython_test.cpp  argmax_wrapper.cpp  run.sh  tasks.py  test_argmax.py
capc/utils/: flags.py
datasets/: dataset_custom_labels.py  utils.py
datasets/celeba/: celeba_dataset.py  celeba_labels.py  celeba_utils.py
datasets/celeba/scratchpad/: celeba_analyze.py  celeba_train.py  (+2 more)
datasets/cifar/: cifar_utils.py  tinyimage500k.py
datasets/imagenet/: dataset_imagenet.py  imagenet_folder.py
datasets/mnist/: mnist_utils.py
datasets/pascal/: PascalLoader.py  Pascal_utils.py
datasets/svhn/: svhn_utils.py
datasets/xray/: dataset_pathologies.py  train_utils.py  xray_datasets.py  xray_utils.py
dpsgd/: dpsgd_generic.py  pascal_dpsgd.py  pascal_loader.py  run_pascal_dpsgd.sh
envs/: environment.yml
general_utils/: compute_taus.py
models/: add_tau_per_model.py  big_ensemble_model.py  ensemble_model.py  load_models.py  private_model.py
(+46 files in other folders)
